# GPU-Programming

./: .gitignore  README.md
docs/: COMPLETE_PERFORMANCE_ANALYSIS.md  INTERVIEW_SUMMARY.md  NSIGHT_ANALYSIS_RESULTS.txt  README.md  generate_plots.py
kernels/: CMakeLists.txt  README.md  requirements.txt
kernels/elementwise/: activations.cu  activations.cuh  elementwise.cuh  elementwise_add.cu  elementwise_add.cuh
kernels/reduce/: reduce.cuh  reduce_max.cu  reduce_softmax.cu  reduce_softmax_matrix.cu  reduce_sum.cu
kernels/sgemm/: sgemm.cuh  sgemm_v1_naive.cu  sgemm_v2.cu  sgemm_v3.cu  sgemm_v4.cu  sgemm_v5.cu  sgemm_v6.cu  sgemm_v7.cu
kernels/tests/: test_elementwise.cu  test_reduction.cu  test_sgemm.cu  test_transpose.cu
kernels/transpose/: transpose.cu  transpose.cuh
mnist-cuda/: CMakeLists.txt  README.md  plot_mlp_flow.py  plot_timing.py
mnist-cuda/src/: downloader.py  v1.py  v2.py  v3.c  v4.cu  v5.cu  v6.cu  v7.cu  v8.cu
pytorch-extension/: README.md  polynomial_activation.py  polynomial_cuda.cu  setup.py
triton/: README.md  requirements.txt  softmax.py  vec_add.py
